@@ -1,0 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<patterns>
+  <pattern name="Clauses" enabled="true"/>
+</patterns>
