@@ -1,0 +1,5 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<patterns>
+  <pattern name="Dialogue" enabled="true"/>
+  <pattern name="Clauses" enabled="true"/>
+</patterns>
